remove binary infix ops

--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,7 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- mtl
 - parsec
 
 library:
@@ -28,6 +29,8 @@ library:
   default-extensions:
     - StandaloneDeriving
     - DeriveFunctor
+    - FlexibleInstances
+    - FlexibleContexts
 
 executables:
   pear-exe:
