most of type checker

--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,7 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- containers
 - mtl
 - parsec
 
@@ -31,6 +32,7 @@ library:
     - DeriveFunctor
     - FlexibleInstances
     - FlexibleContexts
+    - GeneralizedNewtypeDeriving
 
 executables:
   pear-exe:
