--- a/typing-haskell.cabal
+++ b/typing-haskell.cabal
@@ -24,6 +24,7 @@ library
                        Language.Typechecker
                        Language.Entailment
                        Language.TypeInference
+                       Language.Desugarer
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , mtl
